<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:id="@+id/TopView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@android:color/holo_green_dark" />
        <View
            android:id="@+id/BottomView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/headingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:text="@string/Register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/encourageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:text="@string/EncourageText"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/facebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="10dp"
            android:text="@string/Facebook"
            app:backgroundTint="@android:color/holo_blue_dark"></Button>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/clientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:text="@string/Name"
        android:textColor="@color/teal_700"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/clientNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/GivenName"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:autofillHints="name"/>

    <TextView
        android:id="@+id/clientEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:text="@string/Email"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        tools:text="@string/Email" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:autofillHints="email"/>

    <TextView
        android:id="@+id/PasswordClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:text="@string/Password"
        android:textColor="@color/teal_700"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/ConfirmationPasswordClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:text="@string/RepeatPassword"
        android:textColor="@color/teal_700"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextConfirmationPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="confirmationpassword"
        android:ems="10"
        android:hint="@string/RepeatPassword"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/planet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Planet"
        app:srcCompat="@drawable/planet" />


</LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/registerEncourageTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:text="@string/RegisterNow"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>